Trying to solve 100vh on mobile devices problem [10]

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ main {
   flex-direction: column;
   gap: 5px;
   height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
 }
 
